--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,44 @@
 {
-  "name": "restful-web-service",
-  "description": "arq. restful web service",
-  "main": "index.js",
+  "name": "code-rockr-test",
+  "version": "0.0.0",
+  "description": "CodeRockr test",
   "authors": [
     "Renato Benkendorf"
   ],
-  "license": "UNLICENSED",
+  "license": "ISC",
   "keywords": [
-    "restful",
-    "webservice",
-    "application",
-    "api-rest",
-    "rest"
-  ],
-  "homepage": "https://github.com/renatobenks/school-challenge-restful",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
     "test",
-    "tests"
+    "Coderockr",
+    "angular-app"
   ],
+  "homepage": "https://github.com/renatobenks/coderockr-test",
   "dependencies": {
-    "angular": "^1.5.8",
-    "angular-resource": "^1.5.8",
-    "angular-route": "^1.5.8"
+    "angular": "^1.4.0",
+    "bootstrap": "^3.2.0",
+    "angular-animate": "^1.4.0",
+    "angular-aria": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-messages": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0",
+    "angular-flowtype": "*",
+    "Flowtype.js": "^1.1.0",
+    "animate.css": "animation.css#^3.5.2"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.4.0"
+  },
+  "appPath": "app",
+  "moduleName": "codeRockrTestApp",
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "less/bootstrap.less",
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
   }
 }
